--- a/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
+++ b/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
@@ -2,11 +2,10 @@
   class="form"
   #form="ngForm"
   (ngSubmit)="onSubmitForm($event)"
-  (reset)="onReset($event)"
-  >
+  (reset)="onReset($event)">
+  
   <div class="form-field">
     <label for="name">First Name</label>
-
     <input
       [(ngModel)]="userInfo.firstName"
       required
@@ -17,27 +16,11 @@
       type="text"
       id="name"
       placeholder="Enter your name">
-
-    <div *ngIf="firstName.dirty && firstName.hasError('required')"
-      class="input-error">The field is required</div>
-
-    <div *ngIf="firstName.dirty && firstName.hasError('minlength')"
-      class="input-error">The length should be at least
-      <strong>{{firstName.getError('minlength').requiredLength}}</strong>
-      characters
-    </div>
-
-    <div *ngIf="firstName.dirty && firstName.hasError('appBanWords')"
-      class="input-error">
-      The value
-      <strong>{{firstName.getError('appBanWords').bannedWords}}</strong> is not
-      allowed
-    </div>
+    <app-input-error *ngIf="firstName.dirty" [errors]="firstName.errors"></app-input-error>
   </div>
 
   <div class="form-field">
     <label for="last-name">Last Name</label>
-
     <input
       [(ngModel)]="userInfo.lastName"
       required
@@ -47,21 +30,11 @@
       type="text"
       id="last-name"
       placeholder="Enter your last name">
-
-    <div *ngIf="lastName.dirty && lastName.hasError('required')"
-      class="input-error">This field is required</div>
-
-    <div *ngIf="lastName.dirty && lastName.hasError('minlength')"
-      class="input-error">
-      The length should be at least
-      <strong>{{lastName.getError('minlength').requiredLength}}</strong>
-      characters
-    </div>
+    <app-input-error *ngIf="lastName.dirty" [errors]="lastName.errors"></app-input-error>
   </div>
 
   <div class="form-field">
     <label for="nickname">Nickname</label>
-
     <input
       [(ngModel)]="userInfo.nickname"
       [ngModelOptions]="{ updateOn: 'blur'}"
@@ -75,35 +48,12 @@
       type="text"
       id="nickname"
       placeholder="Come up with a nickname">
-
-    <div *ngIf="nickname.dirty && nickname.hasError('required')"
-      class="input-error">This field is required</div>
-
-    <div *ngIf="nickname.dirty && nickname.hasError('minlength')"
-      class="input-error">This field is too short</div>
-
-    <div *ngIf="nickname.dirty && nickname.hasError('pattern')"
-      class="input-error">Only letters, numbers, _ and . is allowed
-    </div>
-
-    <div *ngIf="nickname.dirty && nickname.hasError('appBanWords')"
-      class="input-error">
-      The value
-      <strong>{{nickname.getError('appBanWords').bannedWords}}</strong> is not
-      allowed
-    </div>
-
-    <div *ngIf="nickname.dirty && nickname.hasError('appUniqueNickname')"
-      class="input-error">
-      This nickname is taken
-    </div>
-
+    <app-input-error *ngIf="nickname.dirty" [errors]="nickname.errors"></app-input-error>
     <div *ngIf="nickname.pending" class="input-info">Checking...</div>
   </div>
 
   <div class="form-field">
     <label for="email">Email</label>
-
     <input
       [(ngModel)]="userInfo.email"
       email
@@ -113,31 +63,25 @@
       type="email"
       id="email"
       placeholder="Provide your email">
-
-    <div *ngIf="email.dirty && email.hasError('required')"
-      class="input-error">This field is required</div>
-
-    <div *ngIf="email.dirty && email.hasError('email')" class="input-error">This
-      field should be a valid email</div>
+    <app-input-error *ngIf="email.dirty" [errors]="email.errors"></app-input-error>
   </div>
 
   <div class="form-field-inline-group">
     <div class="form-field form-field--small">
       <label for="year-of-birth">Year of birth</label>
-
-      <select #yearOfBirth="ngModel" required id="year-of-birth"
-        [(ngModel)]="userInfo.yearOfBirth" name="year-of-birth">
-
+      <select 
+        #yearOfBirth="ngModel" 
+        required 
+        id="year-of-birth"
+        [(ngModel)]="userInfo.yearOfBirth" 
+        name="year-of-birth">
         <option *ngFor="let year of years" [value]="year">{{year}}</option>
       </select>
-
-      <div *ngIf="yearOfBirth.dirty && yearOfBirth.hasError('required')"
-        class="input-error">This field is required</div>
+      <app-input-error *ngIf="yearOfBirth.dirty" [errors]="yearOfBirth.errors"></app-input-error>
     </div>
 
     <div class="form-field form-field--small">
       <label for="passport">Passport Number</label>
-
       <input
         [(ngModel)]="userInfo.passport"
         pattern="^[A-Z]{2}[0-9]{6}$"
@@ -147,40 +91,29 @@
         type="text"
         id="passport"
         placeholder="Provide Passport Data">
-
-      <div *ngIf="passport.dirty && passport.hasError('pattern')"
-        class="input-error">Invalid passport number
-      </div>
-
-      <div *ngIf="passport.dirty && passport.hasError('required')"
-        class="input-error">
-        Required for adults
-      </div>
+      <app-input-error *ngIf="passport.dirty" [errors]="passport.errors"></app-input-error>
     </div>
   </div>
 
   <fieldset ngModelGroup="address">
     <legend>Address</legend>
-
+    
     <div class="form-field">
-      <label for="full-address">Full Adress</label>
-
+      <label for="full-address">Full Address</label>
       <input
         [(ngModel)]="userInfo.fullAddress"
         required
-        #fullAdress="ngModel"
+        #fullAddress="ngModel"
         name="full-address"
         type="text"
         id="full-address"
         placeholder="Street name and house number">
-
-      <div *ngIf="fullAdress.dirty && fullAdress.hasError('required')"
-        class="input-error">This field is required</div>
+        
+      <app-input-error *ngIf="fullAddress.dirty" [errors]="fullAddress.errors"></app-input-error>
     </div>
 
     <div class="form-field">
       <label for="city">City</label>
-
       <input
         [(ngModel)]="userInfo.city"
         required
@@ -189,14 +122,11 @@
         type="text"
         id="city"
         placeholder="City">
-
-      <div *ngIf="city.dirty && city.hasError('required')"
-        class="input-error">This field is required</div>
+      <app-input-error *ngIf="city.dirty" [errors]="city.errors"></app-input-error>
     </div>
 
     <div class="form-field">
       <label for="post-code">Post Code</label>
-
       <input
         [(ngModel)]="userInfo.postCode"
         required
@@ -205,19 +135,15 @@
         type="number"
         id="post-code"
         placeholder="Post code">
-
-      <div *ngIf="postCode.dirty && postCode.hasError('required')"
-        class="input-error">This field is required</div>
+      <app-input-error *ngIf="postCode.dirty" [errors]="postCode.errors"></app-input-error>
     </div>
   </fieldset>
 
-  <fieldset ngModelGroup="password" appPasswordShouldMatch
-    #passwordGroup="ngModelGroup">
+  <fieldset ngModelGroup="password" appPasswordShouldMatch #passwordGroup="ngModelGroup">
     <legend>User Password</legend>
-
+    
     <div class="form-field">
       <label for="password">Password</label>
-
       <input
         [(ngModel)]="userInfo.password"
         required
@@ -227,23 +153,11 @@
         type="password"
         id="password"
         placeholder="Enter user's password">
-
-      <div *ngIf="password.dirty && password.hasError('required')"
-        class="input-error">
-        This field is required
-      </div>
-
-      <div *ngIf="password.dirty && password.hasError('minlength')"
-        class="input-error">
-        Password length should be at least
-        <strong>{{password.getError('minlength').requiredLength}}</strong>
-        characters
-      </div>
+      <app-input-error *ngIf="password.dirty" [errors]="password.errors"></app-input-error>
     </div>
 
     <div class="form-field">
       <label for="confirm-password">Confirm password</label>
-
       <input
         [(ngModel)]="userInfo.confirmPassword"
         #confirmPassword="ngModel"
@@ -251,11 +165,7 @@
         type="password"
         id="confirm-password"
         placeholder="Confirm the password">
-
-      <div
-        *ngIf="confirmPassword.dirty && confirmPassword.hasError('appPasswordShouldMatch')"
-        class="input-error">Password doesn't match
-      </div>
+      <app-input-error *ngIf="confirmPassword.dirty" [errors]="confirmPassword.errors"></app-input-error>
     </div>
   </fieldset>
 
