Add touched on blur error creation

--- a/src/app/playgrounds/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/src/app/playgrounds/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -18,7 +18,7 @@
     <label for="nickname">Nickname</label>
 
     <input formControlName="nickname" type="text" id="nickname"
-      placeholder="Come up with a nickname">
+      placeholder="Come up with a nickname" (blur)="onBlur($event)">
   </div>
 
   <div class="form-field">
