--- a/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
+++ b/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
@@ -1,5 +1,6 @@
 <form
   class="form"
+  [ngFormOptions]="{ updateOn: 'submit' }"
   #form="ngForm"
   (ngSubmit)="onSubmitForm($event)"
   (reset)="onReset($event)">
@@ -158,6 +159,6 @@
     </div>
   </fieldset>
 
-  <button [disabled]="form.invalid || form.pending">Save</button>
+  <button>Save</button>
   <button type="reset" class="reset-button">Reset</button>
 </form>
