Add Support of Dynamic Error Messages for the Form Groups

--- a/src/app/playgrounds/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/src/app/playgrounds/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -3,7 +3,11 @@
   <div class="form-field">
     <label for="name">First Name</label>
 
-    <input [errorStateMatcher]="showErrorStrategy" formControlName="firstName" type="text" id="name"
+    <input 
+      [errorStateMatcher]="showErrorStrategy" 
+      formControlName="firstName" 
+      type="text" 
+      id="name"
       placeholder="Enter your name">
   </div>
 
