--- a/src/app/playgrounds/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/src/app/playgrounds/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -124,7 +124,7 @@
     <div class="form-field">
       <label for="confirm-password">Confirm Password</label>
 
-      <input formControlName="confirmPassword" type="password"
+      <input formControlName="confirmPassword" withoutValidationErrors type="password"
         id="confirm-password" placeholder="Enter password...">
     </div>
   </fieldset>
