--- a/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
+++ b/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
@@ -151,6 +151,7 @@
       <label for="confirm-password">Confirm password</label>
       <input
         [(ngModel)]="userInfo.confirmPassword"
+        withoutValidationErrors
         #confirmPassword="ngModel"
         name="confirm-password"
         type="password"
