--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,5 @@
   </article>
 </main>
 
-<app-footer class="footer"></app-footer>
+<app-footer [(year)]="copyrightYear" class="footer"></app-footer>
+<p>Value of 'copyrightYear' in AppComponent: {{ copyrightYear }}</p>
