--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,1 +1,2 @@
-<p></p>
+<p>&copy; {{ year }} Decoded Frontend</p>
+<p>See all <a target="_blank" href="https://courses.decodedfrontend.io/">Advanced Angular Courses</a></p>
