Addition 2 - Assigning the Directive Instances to Template Variables

--- a/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
+++ b/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
@@ -37,9 +37,10 @@
     <label for="last-name">Last Name</label>
     <input
       [(ngModel)]="userInfo.lastName"
+      appAlert
       required
       minlength="5"
-      #lastName="ngModel"
+      #lastName="Alert"
       name="last-name"
       type="text"
       id="last-name"
