Fix reactive password error visibility

--- a/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
+++ b/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
@@ -1,10 +1,9 @@
 <form
   class="form"
   #form="ngForm"
+  [ngFormOptions]="{ updateOn: 'submit' }"
   (ngSubmit)="onSubmitForm($event)"
   (reset)="onReset($event)">
-  <!-- [ngFormOptions]="{ updateOn: 'submit' }" -->
-  <pre>{{userInfo | json}}</pre>
 
   <div class="form-field">
     <!-- <label for="name">First Name</label>
