BONUS UPDATE: How To Add New Controls into FormArray Interactively

--- a/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
@@ -19,6 +19,7 @@
       </ng-container>
     </ng-container>
 
-    <button [disabled]="formConfig.form.invalid">Save</button>
+    <!-- <button [disabled]="formConfig.form.invalid">Save</button> -->
+    <button>Save</button>
   </form>
 </div>
