--- a/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
@@ -12,9 +12,11 @@
   <form [formGroup]="formConfig.form" (ngSubmit)="onSubmit(formConfig.form)">
     <h3 class="form-heading">{{formConfig.config.description}}</h3>
 
-    <ng-container *ngFor="let control of formConfig.config.controls | keyvalue: comparatorFn">
+    <ng-container
+      *ngFor="let control of formConfig.config.controls | keyvalue: comparatorFn">
       <!-- Check: in angular 16 you can pass input parameters to ngComponentOutlet and remove the injector -->
       <ng-container
+        *activateControlIf="control.value.activationConfig"
         [ngComponentOutlet]="controlResolver.resolve(control.value.controlType) | async"
         [ngComponentOutletInjector]="control.key | controlInjector:control.value">
       </ng-container>
